--- a/extensions/xmtp/package.json
+++ b/extensions/xmtp/package.json
@@ -3,6 +3,10 @@
   "version": "2026.2.4",
   "description": "XMTP decentralized messaging channel",
   "type": "module",
+  "scripts": {
+    "test": "vitest run",
+    "test:e2e": "vitest run --config ../../vitest.e2e.config.ts"
+  },
   "dependencies": {
     "@xmtp/agent-sdk": "^2.0.1",
     "viem": "^2.21.0",
