--- a/fly.toml
+++ b/fly.toml
@@ -1,7 +1,7 @@
 # OpenClaw Fly.io deployment configuration
 # See https://fly.io/docs/reference/configuration/
 
-app = "openclaw"
+app = "nicks-claw"
 primary_region = "iad" # change to your closest region
 
 [build]
@@ -15,10 +15,10 @@ OPENCLAW_STATE_DIR = "/data"
 NODE_OPTIONS = "--max-old-space-size=1536"
 
 [processes]
-app = "node dist/index.js gateway --allow-unconfigured --port 3000 --bind lan"
+app = "node dist/index.js gateway --allow-unconfigured --port 18789 --bind lan"
 
 [http_service]
-internal_port = 3000
+internal_port = 18789
 force_https = true
 auto_stop_machines = false # Keep running for persistent connections
 auto_start_machines = true
